--- a/DOM/one.html
+++ b/DOM/one.html
@@ -3,30 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM Learning</title>  ////DOM --> Document Object Model
+    <title>DOM</title>
     <style>
-        body {
+        .bg-black {
             background-color: #212121;
-            color: #fff;
+            color: aliceblue;
         }
     </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 id="title">DOM learning on chai aur code
-            <span style="display: none;">Text test...</span>
-        </h1>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <h2>Lorem ipsum dolor sit.</h2>
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">DOM Learning <span style="display: none;">Test text...</span></h1>
+        <h2>Hey</h2>
+        <h2>This is</h2>
+        <h2>Raunakk....</h2>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
 
-    <ul> 
-        <li class="list-item">One</li>
-        <li class="list-item">Two</li>
-        <li class="list-item">Three</li>
-        <li class="list-item">Four</li>
-    </ul>
-    
+        <ul>
+            <li class="list-item">One</li>
+            <li class="list-item">Two</li>
+            <li class="list-item">Three</li>
+            <li class="list-item">Four</li>
+        </ul>
     </div>
 </body>
 </html>
