--- a/DOM/two.html
+++ b/DOM/two.html
@@ -3,22 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM | Chai aur Code</title>
+    <title>Document</title>
 </head>
-<body style="background-color: black; color: white;">
-
-    <div class="parent">
-        <div class="day">Monday</div>
-        <div class="day">Tuesday</div>
-        <div class="day">wednesday</div>
-        <div class="day">Thursday</div>
-    </div>
-
+<body>
+    
 </body>
-
-<script>
-    const parent = document.querySelector('.parent');
-    console.log(parent);
- </script>
- 
 </html>
