--- a/DOM/two.html
+++ b/DOM/two.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM Relations</title>
 </head>
-<body>
-    
+<body style="background-color: black; color : white">
+    <div class="parent">
+        <div class="day">Monday</div>
+        <div class="day">Tuesday</div>
+        <div class="day">Wednesday</div>
+        <div class="day">Thursday</div>
+    </div>
 </body>
+<script>
+    const parent = document.querySelector(".parent");
+    console.log(parent);
+ 
+    console.log(parent.children); //Returns HTML Collection
+
+    for(let i=0;i<parent.children.length;i++) {
+            console.log(parent.children[i].innerHTML);
+    }
+
+    console.log(parent.childNodes);
+</script>
 </html>
